--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -36,27 +36,27 @@
 			<div style="background-color: var(--fondoCuerpo);">
 				<div style="display: flex; align-items: center; width: 100%;">
 					<div style="width: 100%; font-size: 23px; text-align: left;">
-						@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String1")
+						@Herramientas.Idiomas.CogerCadena(idioma, "String1", "Wishlist")
 					</div>
 
 					<div style="display: flex; align-items: center; justify-content: right; width: 100%;">
 						<div style="font-size: 14px;">
-							@deseadosMostrar.Count.ToString() @Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String8") • @cantidadMinimos.ToString() @Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String11")
+							@deseadosMostrar.Count.ToString() @Herramientas.Idiomas.CogerCadena(idioma, "String8", "Wishlist") • @cantidadMinimos.ToString() @Herramientas.Idiomas.CogerCadena(idioma, "String11", "Wishlist")
 						</div>
 					</div>
 				</div>
 
 				<div style="display: flex; align-items: center; width: 100%; margin: 15px 0px;">
-					<input type="text" @bind-value="@textoBuscador" class="entrada-texto" style="flex: 1; margin-right: 30px; min-width: 150px;" placeholder="@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String7")" />
+					<input type="text" @bind-value="@textoBuscador" class="entrada-texto" style="flex: 1; margin-right: 30px; min-width: 150px;" placeholder="@Herramientas.Idiomas.CogerCadena(idioma, "String7", "Wishlist")" />
 
 					<button class="boton-pequeño" @onclick="EnseñarOpciones" style="width: auto; padding: 10px 15px; margin-right: 30px; border: 0px; color: var(--colorTextoVisitado);">
-						@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String12")
+						@Herramientas.Idiomas.CogerCadena(idioma, "String12", "Wishlist")
 					</button>
 
 					<div class="menu-dropdown" style="width: auto;">
 						<button class="boton-pequeño" style="display: flex; align-items: center; width: 100%; padding: 10px 15px; margin: 0; border: 0px; color: var(--colorTextoVisitado);">
 							<div style="padding-right: 5px;">
-								@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String2"):
+								@Herramientas.Idiomas.CogerCadena(idioma, "String2", "Wishlist"):
 							</div>
 
 							<div style="color: var(--colorEnlace); padding-right: 15px;">
@@ -70,20 +70,23 @@
 
 						<div class="menu-dropdown-contenido" style="right: 0; width: 100%; background-color: var(--fondoBotonPequeño);">
 							<button class="texto-cabecera menu-dropdown-item" style="text-align: left; width: 100%; border: 0px;" @onclick="OrdenarReseñasPorcentaje">
-								@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String3")
+								@Herramientas.Idiomas.CogerCadena(idioma, "String3", "Wishlist")
 							</button>
 							<button class="texto-cabecera menu-dropdown-item" style="text-align: left; width: 100%; border: 0px;" @onclick="OrdenarReseñasCantidad">
-								@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String9")
+								@Herramientas.Idiomas.CogerCadena(idioma, "String9", "Wishlist")
 							</button>
 							<hr/>
-							<button class="texto-cabecera menu-dropdown-item" style="text-align: left; width: 100%; border: 0px;" @onclick="OrdenarNombre">
-								@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String10")
+							<button class="texto-cabecera menu-dropdown-item" style="text-align: left; width: 100%; border: 0px;" @onclick="OrdenarNombreAZ">
+								@Herramientas.Idiomas.CogerCadena(idioma, "String10", "Wishlist")
+							</button>
+							<button class="texto-cabecera menu-dropdown-item" style="text-align: left; width: 100%; border: 0px;" @onclick="OrdenarNombreZA">
+								@Herramientas.Idiomas.CogerCadena(idioma, "String14", "Wishlist")
 							</button>
 							<button class="texto-cabecera menu-dropdown-item" style="text-align: left; width: 100%; border: 0px;" @onclick="OrdenarPrecio">
-								@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String4")
+								@Herramientas.Idiomas.CogerCadena(idioma, "String4", "Wishlist")
 							</button>
 							<button class="texto-cabecera menu-dropdown-item" style="text-align: left; width: 100%; border: 0px;" @onclick="OrdenarDescuento">
-								@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String5")
+								@Herramientas.Idiomas.CogerCadena(idioma, "String5", "Wishlist")
 							</button>
 						</div>
 					</div>
@@ -185,7 +188,7 @@
 												@if (juego.Historico == true)
 												{
 													<div style="text-align: center; font-size: 14px; padding: 5px 15px; background-color: var(--fondoAlerta); margin-right: 3px;">
-														@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String6")
+														@Herramientas.Idiomas.CogerCadena(idioma, "String6", "Wishlist")
 													</div>
 												}
 												else
@@ -216,7 +219,7 @@
 					</button>
 
 					<div style="font-size: 20px;">
-						@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String12")
+						@Herramientas.Idiomas.CogerCadena(idioma, "String12", "Wishlist")
 					</div>
 				</div>
 
@@ -228,7 +231,7 @@
 					</div>
 
 					<div style="margin-left: 20px; padding-bottom: 5px;">
-						@Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String13")
+						@Herramientas.Idiomas.CogerCadena(idioma, "String13", "Wishlist")
 					</div>
 				</div>
 
@@ -394,7 +397,11 @@
 						}
 						else if (usuario.WishlistSort == 2)
 						{
-							OrdenarNombre();
+							OrdenarNombreAZ();
+						}
+						else if (usuario.WishlistSort == 5)
+						{
+							OrdenarNombreZA();
 						}
 						else if (usuario.WishlistSort == 3)
 						{
@@ -574,7 +581,7 @@
 	{
 		if (deseadosMostrar != null)
 		{
-			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String3");
+			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "String3", "Wishlist");
 
 			if (deseadosMostrar.Count > 0)
 			{
@@ -593,7 +600,7 @@
 	{
 		if (deseadosMostrar != null)
 		{
-			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String9");
+			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "String9", "Wishlist");
 
 			if (deseadosMostrar.Count > 0)
 			{
@@ -608,11 +615,11 @@
 		}
 	}
 
-	private async void OrdenarNombre()
+	private async void OrdenarNombreAZ()
 	{
 		if (deseadosMostrar != null)
 		{
-			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String10");
+			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "String10", "Wishlist");
 
 			if (deseadosMostrar.Count > 0)
 			{
@@ -627,11 +634,30 @@
 		}
 	}
 
+	private async void OrdenarNombreZA()
+	{
+		if (deseadosMostrar != null)
+		{
+			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "String14", "Wishlist");
+
+			if (deseadosMostrar.Count > 0)
+			{
+				deseadosMostrar = deseadosMostrar.AsParallel().OrderByDescending(x => x.Nombre).ToList();
+			}
+
+			if (usuario != null)
+			{
+				usuario.WishlistSort = 5;
+				await UserManager.UpdateAsync(usuario);
+			}
+		}
+	}
+
 	private async void OrdenarPrecio()
 	{
 		if (deseadosMostrar != null)
 		{
-			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String4");
+			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "String4", "Wishlist");
 
 			if (deseadosMostrar.Count > 0)
 			{
@@ -650,7 +676,7 @@
 	{
 		if (deseadosMostrar != null)
 		{
-			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "Wishlist.String5");
+			ordenamientoElegido = Herramientas.Idiomas.CogerCadena(idioma, "String5", "Wishlist");
 
 			if (deseadosMostrar.Count > 0)
 			{
